fix broken css with navbar (now is fullpage)

--- a/src/components/app-shell.css
+++ b/src/components/app-shell.css
@@ -2,13 +2,6 @@ html, body {
   height: 100%; /* flexbox requirement */
 }
 
-body {
-  background-color: #EEE;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
 /* fix images being larger then the screensize (mobile mostly) */
 img {
   max-width: 100%;
@@ -19,17 +12,17 @@ img {
 }
 
 .app {
+  background-color: #EEE;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
 main {
-  height: 100%;
   background-color: white;
-  overflow-y: auto;   
   max-height: 100vh;   /* for 100% viewport height */
-  -webkit-overflow-scrolling: touch; /* mobile safari */
-
   flex: 1;
+  -webkit-overflow-scrolling: touch; /* mobile safari */
   overflow-y: auto; /* make element scrollable  */
 }
 
